implementa autorización, cambia dispositivos, entre otros
