# src/swagger.json
@@ -144,10 +144,19 @@
         ],
         "summary": "Obtiene la lista de dispositivos",
         "description": "",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "Authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
           }
         }
       },
@@ -203,7 +212,7 @@
         }
       }
     },
-    "/device/{uuid}": {
+    "/device/{uuid}/": {
       "get": {
         "tags": [
           "Device"
@@ -259,6 +268,91 @@
             "required": true,
             "type": "string",
             "description": "Identificador único UUID del dispositivo"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/device/new/": {
+      "post": {
+        "tags": [
+          "Device"
+        ],
+        "summary": "Obtiene un dispositivo usando sus credenciales",
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "description": "Cuerpo de la solicitud",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "uuid": {
+                  "type": "string",
+                  "example": "1234-1234-1234"
+                },
+                "password": {
+                  "type": "string",
+                  "example": "asd123"
+                }
+              },
+              "required": [
+                "uuid",
+                "password"
+              ]
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "403": {
+            "description": "Forbidden"
+          }
+        }
+      }
+    },
+    "/device/add/{uuid}/": {
+      "patch": {
+        "tags": [
+          "Device"
+        ],
+        "summary": "Modifica un dispositivo existente",
+        "description": "",
+        "parameters": [
+          {
+            "name": "uuid",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "description": "Identificador único UUID del dispositivo"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "organization": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                },
+                "param": {
+                  "example": "any"
+                },
+                "password": {
+                  "example": "any"
+                }
+              }
+            }
           }
         ],
         "responses": {
